--- a/index-dev.html
+++ b/index-dev.html
@@ -1,16 +1,49 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+
     <meta charset="UTF-8" />
     <title>Small FRP</title>
   </head>
   <body>
     <!-- Include Scala.js compiled code -->
+    <div class="container pt-5">
+      <h1>Small FRP Implementation is Scala</h1>
+      <div class="form-group">
+        <label for="exampleFormControlTextarea1"
+          >Example textarea. Count color will change to
+          <span style="color: red;">red </span> if there are more than 10
+          characters, or <span style="color: green;">green</span> otherwise.
+        </label>
+        <textarea class="form-control" id="area_target" rows="3"></textarea>
+      </div>
+      <p>Count: <span id="label_target"></span></p>
+    </div>
 
-    <span id="c"></span>
     <script
       type="text/javascript"
       src="./target/scala-2.12/prototype-fastopt.js"
+    ></script>
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"
     ></script>
   </body>
 </html>
