--- a/index-dev.html
+++ b/index-dev.html
@@ -28,7 +28,7 @@
 
     <script
       type="text/javascript"
-      src="./target/scala-2.12/prototype-fastopt.js"
+      src="./target/scala-2.12/frp-scala-fastopt.js"
     ></script>
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
